infra/k8s/base/dawn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawn
  labels:
    app.kubernetes.io/name: dawn
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: dawn
  ports:
    - name: https
      port: 8443
      targetPort: https
    - name: metrics
      port: 9101
      targetPort: metrics
